# excafe

./: AUTHORS  Makefile  Makefile.am  README  TODO  bootstrap  configure.ac  main.cpp
heat/: solver.cpp
include/: cell.hpp  dof_map.hpp  dof_map_builder.hpp  finite_element.hpp  lagrange_triangle_linear.hpp  lagrange_triangle_quadratic.hpp  libtriangle.hpp  matrix.hpp  mesh.hpp  simple_cfd_fwd.hpp  stokes_system.hpp  vertex.hpp
include/excafe/: boundary_condition3.hpp  boundary_condition_list.hpp  boundary_condition_trivial.hpp  cell_manager.hpp  cell_vertices.hpp  config.h.in  coordinate_transformation.hpp  discrete_field.hpp  discrete_operator.hpp  discrete_value_traits.hpp  dof.hpp  dof_association.hpp  dof_map.hpp  dof_map_builder.hpp  excafe_fwd.hpp  exception.hpp  finite_element.hpp  function.hpp  general_cell.hpp  lagrange_triangle.hpp  local_assembly_matrix.hpp  local_assembly_vector.hpp  mesh.hpp  mesh_cell.hpp  mesh_connectivity.hpp  mesh_entity.hpp  mesh_entity_iterator_global.hpp  mesh_entity_iterator_local.hpp  mesh_function.hpp  mesh_geometry.hpp  mesh_geometry_impl.hpp  mesh_topology.hpp  nodal_basis_solver.hpp  petsc_manager.hpp  polygon.hpp  python_manager.hpp  quadrature_points.hpp  subdomain.hpp  triangular_cell.hpp  triangular_mesh_builder.hpp  (+1 more)
include/excafe/capture/: capture_fwd.hpp  dimensionless_scenario.hpp  scenario.hpp  solve_operation.hpp
include/excafe/codegen/: codegen_fwd.hpp  dynamic_cxx.hpp  product.hpp  ufc_evaluator.hpp  ufc_integral_generator.hpp
include/excafe/cse/: biclique.hpp  biclique_search.hpp  cse_fwd.hpp  cse_optimiser.hpp  cube.hpp  expression_provider.hpp  factorised_expression_visitor.hpp  kcm.hpp  kcm_properties.hpp  literal_info.hpp  new_literal_creator.hpp  polynomial_index.hpp  properties.hpp  sop.hpp  sop_builder.hpp  sop_map.hpp  vertex_info.hpp
include/excafe/mp/: cln_conversions.hpp  float.hpp  integer.hpp  mp_fwd.hpp  rational.hpp
include/excafe/numeric/: cast.hpp  cln_wrapper.hpp  convert_expression.hpp  excafe_expression.hpp  excafe_mapper.hpp  excafe_value_map.hpp  expression.hpp  expression_visitor.hpp  factoriser.hpp  functional.hpp  ginac_expression.hpp  ginac_mapper.hpp  ginac_value_map.hpp  identity_symbol_mapper.hpp  index.hpp  math_utilities.hpp  matrix.hpp  monomial.hpp  numeric_fwd.hpp  optimised_polynomial.hpp  optimised_polynomial_fraction.hpp  orthotope.hpp  polynomial.hpp  polynomial_fraction.hpp  quadrature.hpp  small_matrix.hpp  small_vector.hpp  solver.hpp  sparsity_pattern.hpp  symbol_collector.hpp  symbol_mapper.hpp  sympy_bridge.hpp  sympy_expression.hpp  sympy_expression_converter.hpp  tensor.hpp  tensor_matrix_view.hpp  tensor_size.hpp  traits.hpp  value_map.hpp  vector.hpp
include/itl/: itl_config.h
include/simple_cfd/: boundary_condition.hpp  boundary_condition2.hpp  boundary_condition3.hpp  boundary_condition_handler.hpp  boundary_condition_list.hpp  boundary_condition_trivial.hpp  cell.hpp  cell_manager.hpp  cell_vertices.hpp  config.h.in  coordinate_transformation.hpp  discrete_field.hpp  discrete_operator.hpp  discrete_value_traits.hpp  dof.hpp  dof_association.hpp  dof_map.hpp  dof_map_builder.hpp  dof_numbering_basic.hpp  exception.hpp  fe_binary_function.hpp  fe_matrix.hpp  fe_vector.hpp  finite_element.hpp  function.hpp  general_cell.hpp  lagrange_triangle.hpp  lagrange_triangle_linear.hpp  lagrange_triangle_quadratic.hpp  local_assembly_matrix.hpp  local_assembly_vector.hpp  mesh.hpp  mesh_cell.hpp  mesh_connectivity.hpp  mesh_entity.hpp  mesh_entity_iterator_global.hpp  mesh_entity_iterator_local.hpp  mesh_function.hpp  mesh_geometry.hpp  mesh_geometry_impl.hpp  (+14 more)
lib/: Makefile.am  mesh_connectivity.cpp  mesh_entity_iterator_local.cpp  mesh_topology.cpp  petsc_manager.cpp  python_manager.cpp  triangular_cell.cpp  triangular_mesh_builder.cpp
lib/capture/: solve_operation.cpp
lib/capture/array/: array_index.cpp  tensor_array_function_helper.cpp  tensor_index.cpp
lib/capture/array_old/: tensor_array_function_helper.cpp
lib/capture/assembly/: basis_coefficient.cpp  cell_vertex_component.cpp  generic_symbol.cpp  position_component.cpp  scalar_access.cpp  scalar_constant.cpp  scalar_placeholder.cpp
lib/capture/evaluation/: discrete_expr_scoping.cpp  evaluation_strategy.cpp
lib/capture/fields/: discrete_expr.cpp  discrete_expr_container_builder_form_visitor.cpp  field.cpp  function_space.cpp  operator.cpp  operator_assembly.cpp  scalar.cpp  temporal_index_set.cpp  temporal_index_value.cpp
lib/capture/indices/: propagation_rules.cpp
lib/capture/tensor/: tensor_array_ref.cpp  tensor_placeholder.cpp
lib/codegen/: dynamic_cxx.cpp  product.cpp  ufc_integral_generator.cpp  ufc_kernel_generator.cpp
lib/cse/: cube.cpp  kcm.cpp  polynomial_index.cpp  sop.cpp  sop_map.cpp
lib/mp/: cln_conversions.cpp  float.cpp  integer.cpp  rational.cpp
lib/numeric/: factoriser.cpp  factoriser_table.cpp  math_utilities.cpp  matrix.cpp  monomial.cpp  optimised_polynomial.cpp  polynomial.cpp  quadrature.cpp  solver.cpp  sparsity_pattern.cpp  sympy_bridge.cpp  tensor_size.cpp  vector.cpp
lib/symbolic/: abs.cpp  abstract_basic.cpp  basic.cpp  collect_visitor.cpp  derivative_cache.cpp  expand_visitor.cpp  expr.cpp  extracted_expressions.cpp  float.cpp  group.cpp  number.cpp  polynomial.cpp  product.cpp  rational.cpp  sum.cpp  symbol.cpp
lib/util/: aligned_alloc.cpp  apr_manager.cpp  apr_pool.cpp  timer.cpp  type_info.cpp
m4/: ax_with_library.m4
mass_matrix_generator_2d/: Makefile.am  generator.cpp
matmult_generator/: Makefile.am  event_set.cpp  event_set.hpp  generator.cpp  mat_mult_code_generator.cpp  mat_mult_code_generator.hpp  vector_entry.cpp  vector_entry.hpp
navier_stokes/: Makefile.am  solver.cpp
scripts/: reformat_polynomials
steady_stokes/: Makefile.am  ideal_solver.cpp  main.cpp  solver.cpp
steady_stokes_dolfin/: Makefile.am  SteadyStokes.form  SteadyStokes.ufl  main.cpp
tests/: Makefile.am  cse.cpp  expression_conversion.cpp  factoriser.cpp  forms.cpp  legendre.cpp  mp.cpp  polynomials.cpp  sympy.cpp  tester.cpp  tester.hpp  tests.cpp
(+465 files in other folders)
